--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^1.0.3
   cloud_firestore: ^3.4.9
   firebase_storage: ^10.2.5
+  shared_preferences: ^2.0.15
+  cached_network_image: ^3.2.2
 
 dev_dependencies:
   flutter_test:
