--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_storage: ^10.2.5
   shared_preferences: ^2.0.15
   cached_network_image: ^3.2.2
+  firebase_database: ^9.1.6
 
 dev_dependencies:
   flutter_test:
