--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,6 +43,15 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+
+	<key>NSCameraUsageDescription</key>
+<string>To capture profile photo please grant  camera access</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+<string>App need to access photo lib for profile images</string>
+
+
+
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
