--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   shared_preferences: ^2.0.15
   cached_network_image: ^3.2.2
   image_picker: ^0.8.5+3
+  flutter_sound_lite: ^8.5.0
+  permission_handler: ^10.1.0
+  flutter_audio_recorder2: ^0.0.2
+  path_provider: ^2.0.2
+  audioplayers: ^0.19.1
 
 dev_dependencies:
   flutter_test:
