--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,17 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_auth: ^3.10.0
-  firebase_core: ^1.0.3
-  cloud_firestore: ^3.4.9
-  firebase_storage: ^10.2.5
+  firebase_auth: ^3.11.2
+  firebase_core: ^1.24.0
+  cloud_firestore: ^3.5.1
+  firebase_storage: ^10.3.11
   shared_preferences: ^2.0.15
   cached_network_image: ^3.2.2
-  image_picker: ^0.8.5+3
+  image_picker: ^0.8.6
   flutter_sound_lite: ^8.5.0
   permission_handler: ^10.1.0
   flutter_audio_recorder2: ^0.0.2
-  audioplayers: ^0.19.1
+  audioplayers: ^1.1.1
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
