--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,12 @@ dependencies:
   shared_preferences: ^2.0.15
   cached_network_image: ^3.2.2 
   image_picker: ^0.8.6
-  flutter_sound_lite: ^8.5.0
+  flutter_sound: ^9.2.13
   permission_handler: ^10.1.0
   audioplayers: ^1.1.1
   path_provider: ^2.0.11
+  intl: ^0.17.0
+  audio_session: ^0.1.10
 
 dev_dependencies:
   flutter_test:
