--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>303909345121-lsdqb4lih76m1752tjb4409o7tlsfufq.apps.googleusercontent.com</string>
+	<string>8009482651-4jqv388plc4i1q9fnl0bgfft6qom5c9e.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.303909345121-lsdqb4lih76m1752tjb4409o7tlsfufq</string>
+	<string>com.googleusercontent.apps.8009482651-4jqv388plc4i1q9fnl0bgfft6qom5c9e</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAemSDXYfqp7Co9td5SQrSaPcMLqdchK5Q</string>
+	<string>AIzaSyAOaCxojixoMi_igLgs8d8H7DnHzI2Hfls</string>
 	<key>GCM_SENDER_ID</key>
-	<string>303909345121</string>
+	<string>8009482651</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.jaja.voiceshare</string>
 	<key>PROJECT_ID</key>
-	<string>jaja-79a0d</string>
+	<string>jaja-cf083</string>
 	<key>STORAGE_BUCKET</key>
-	<string>jaja-79a0d.appspot.com</string>
+	<string>jaja-cf083.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:303909345121:ios:fbed4efc2d7966dd479720</string>
-	<key>DATABASE_URL</key>
-	<string>https://jaja-79a0d-default-rtdb.firebaseio.com</string>
+	<string>1:8009482651:ios:659e63f1ee85591740a13e</string>
 </dict>
 </plist>
