--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:303909345121:ios:4177875306a3a471479720",
-  "FIREBASE_PROJECT_ID": "jaja-79a0d",
-  "GCM_SENDER_ID": "303909345121"
+  "GOOGLE_APP_ID": "1:8009482651:ios:659e63f1ee85591740a13e",
+  "FIREBASE_PROJECT_ID": "jaja-cf083",
+  "GCM_SENDER_ID": "8009482651"
 }
